--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <link rel="stylesheet" type="text/css" media="screen" href="stylesheets/stylesheet.css">
 
-    <title>Xplusy.GitHub.io</title>
+    <title>XplusY.GitHub.io</title>
   </head>
 
   <body>
@@ -18,7 +18,7 @@
         <header class="inner">
           <a id="forkme_banner" href="https://github.com/XPlusY">View on GitHub</a>
 
-          <h1 id="project_title">Xplusy.GitHub.io</h1>
+          <h1 id="project_title">Welcome to Alex10's Blog.</h1>
           <h2 id="project_tagline"></h2>
 
         </header>
@@ -27,7 +27,10 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-        <p>First Page</p>
+       <audio controls="controls">
+         <source src="music/alex.mp3" type="audio/mp3" />
+         Your browser does not support this audio format.
+         </audio>
       </section>
     </div>
 
